<resources>
    <string name="app_name">Test One</string>
    <string name="total_amount">Total Amount =</string>
    <string name="payments">Payments</string>
    <string name="save_button_text">Save</string>
    <string name="add_payment">Add payment</string>
    <string name="amount">₹ Amount</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="transaction_reference">Transaction Reference</string>
    <string name="provider">Provider (ICICI, Citibank, etc.)</string>
</resources>