<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Total Amount Display -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/total_amount"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


        <!-- Payments Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payments"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--        &lt;!&ndash; ChipGroup to Display Payments &ndash;&gt;-->
        <!--        <com.google.android.material.chip.ChipGroup-->
        <!--            android:id="@+id/chipGroup"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:paddingVertical="8dp"-->
        <!--            app:chipSpacing="8dp"-->
        <!--            app:singleLine="false" />-->
        <LinearLayout
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>


        <!-- Add Payment Link -->
        <TextView
            android:id="@+id/addPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingVertical="8dp"
            android:text="@string/add_payment"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <!-- Save Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>